setup rsync deployment; fixed some asides

--- a/source/_includes/custom/asides/blogs.html
+++ b/source/_includes/custom/asides/blogs.html
@@ -2,22 +2,22 @@
   <h1>Blogs</h1>
   <ul>
     <li>
-      <a href="{{ root_url }}/blog/categories/going-to-otago">Going to Otago</a>
+      <a href="{{ root_url }}/category/going-to-otago">Going to Otago</a>
     </li>
     <li>
-      <a href="{{ root_url }}/blog/categories/bachelor-in-london">Bachelor in London</a>
+      <a href="{{ root_url }}/category/bachelor-in-london">Bachelor in London</a>
     </li>
     <li>
-      <a href="{{ root_url }}/blog/categories/linux">Tux's World</a>
+      <a href="{{ root_url }}/category/linux">Tux's World</a>
     </li>
     <li>
-      <a href="{{ root_url }}/blog/categories/sci-log">Sci-Log</a>
+      <a href="{{ root_url }}/category/sci-log">Sci-Log</a>
     </li>
     <li>
-      <a href="{{ root_url }}/blog/categories/distributed-computing">Distributed Computing</a>
+      <a href="{{ root_url }}/category/distributed-computing">Distributed Computing</a>
     </li>
     <li>
-      <a href="{{ root_url }}/blog/categories/diverses">Diverses</a>
+      <a href="{{ root_url }}/category/diverses">Diverses</a>
     </li>
   </ul>
 </section>
