--- a/source/_includes/post/author.html
+++ b/source/_includes/post/author.html
@@ -5,4 +5,4 @@
 {% else %}
   {% assign author = site.author %}
 {% endif %}
-{% if author %}<span class="byline author vcard">Geschrieben von <span class="fn">{{ author }}</span></span>{% endif %}
+{% if author %}<span class="byline author vcard">Written by <span class="fn">{{ author }}</span></span>{% endif %}
