--- a/source/_includes/post/creativecommons.html
+++ b/source/_includes/post/creativecommons.html
@@ -7,6 +7,6 @@
 {% endif %}
 <div class="creativecommons">
   <img class="creativecommons" src="http://i.creativecommons.org/l/by-nc-sa/3.0/de/88x31.png" alt="CC-BY-NC-SA 3.0 de" />
-  "<em>{{ page.title }}<em>" von {{ author }}, sofern nicht ausdrücklich gekennzeichnet, steht unter einer <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Germany License</a>.
+  Except otherwise noted, this article ("<em>{{ page.title }}</em>") by {{ author }} is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Germany License</a>.
 </div>
  
