--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,4 +3,5 @@
   <li><a href="{{ root_url }}/about/">Über mich</a></li>
   <li><a href="{{ root_url }}/about/projects/">Projekte</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archive</a></li>
+  <li><a href="{{ root_url }}/impressum">Impressum</a></li>
 </ul>
