--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -20,9 +20,17 @@
   <link rel="canonical" href="{{ canonical }}">
   <link href="{{ root_url }}/favicon.png" rel="icon">
   <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <script src="{{ root_url }}/javascripts/jquery-1.9.1.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    // Revert jQuery's '$' alias, to avoid clashes with ender.js.
+    // NOTE: Use jQuery(...), instead of $(...) from here on.
+    jQuery.noConflict();
+  </script>
   <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
   <script src="{{ root_url }}/javascripts/ender.js"></script>
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
+  <script src="{{ root_url }}/javascripts/jquery.tableofcontents.min.js" type="text/javascript"></script>
+  <script src="{{ root_url }}/javascripts/generate-toc.js" type="text/javascript"></script>
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   {% include custom/head.html %}
   {% include google_analytics.html %}
