add category 'programming' to blogs aside

--- a/source/_includes/custom/asides/blogs.html
+++ b/source/_includes/custom/asides/blogs.html
@@ -11,6 +11,9 @@
       <a href="{{ root_url }}/category/linux">Tux's World</a>
     </li>
     <li>
+      <a href="{{ root_url }}/category/programming">Programming</a>
+    </li>
+    <li>
       <a href="{{ root_url }}/category/sci-log">Sci-Log</a>
     </li>
     <li>
