--- a/sass/_partials.scss
+++ b/sass/_partials.scss
@@ -2,6 +2,7 @@
 @import "partials/navigation";
 @import "partials/blog";
 @import "partials/sharing";
+@import "partials/creativecommons";
 @import "partials/syntax";
 @import "partials/archive";
 @import "partials/sidebar";
